kubernetes/homelab/applications/cilium/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cgw-http-redirect
  namespace: gateway
spec:
  parentRefs:
  - name: cilium-gw
    namespace: gateway
    sectionName: http
    group: gateway.networking.k8s.io	
    kind: Gateway
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
    matches:	
      - path:	
          type: PathPrefix	
          value: /
